--- a/Permutation_Test_For_Metaheuristics_NB.ipynb
+++ b/Permutation_Test_For_Metaheuristics_NB.ipynb
@@ -34,7 +34,7 @@
       "source": [
         "#If you are using Google colab, the data samples can be zipped into one folder and uploaded. Followed by running the code:\n",
         "from zipfile import ZipFile\n",
-        "file_name = '/content/Sample.zip' #Change folder name \n",
+        "file_name = './Sample.zip' #Change file name \n",
         "\n",
         "with ZipFile(file_name, 'r') as zip:\n",
         "  zip.extractall()\n",
